Program: fix program overlapping when re-scheduled. (bug) - also, removed the `redefine` event and added the `remove` event. (breaking change)

--- a/src/ui/components/Logs.css
+++ b/src/ui/components/Logs.css
@@ -57,7 +57,7 @@ div.logs > div.type-update {
 }
 
 div.logs > div.level-error,
-div.logs > div.type-redefine {
+div.logs > div.type-remove {
     color: #e95464;
 }
 
